* Fix null Properties